--- a/wp-content/themes/tema/package.json
+++ b/wp-content/themes/tema/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordpress",
+  "name": "starter",
   "version": "1.0.0",
   "description": "Template Starter Theme",
   "main": "index.js",
