--- a/wp-content/themes/tema/package.json
+++ b/wp-content/themes/tema/package.json
@@ -3,34 +3,33 @@
   "version": "1.0.0",
   "description": "Template Starter Theme",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "gulp compile-dev",
+    "dev": "gulp compileDev",
     "prod": "gulp compile-prod",
-    "compress-css": "gulp compress-css",
+    "css": "gulp compress-css",
     "compress-upload": "gulp compress-upload",
     "compress-images": "gulp compress-images",
     "compress-js": "gulp compress-js"
   },
-  "author": "Maicon cabral",
+  "author": "Guilherme Henrique Borges Silva",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "concurrently": "^4.1.0",
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-stylus": "^2.7.0",
+    "browser-sync": "^3.0.2",
+    "concurrently": "^8.2.2",
+    "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^9.0.0",
+    "gulp-imagemin": "^9.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "gulp-stylus": "^3.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
-    "gulp-webp": "^4.0.1",
-    "node-sass": "^4.14.1"
+    "node-sass": "^9.0.0"
   },
   "dependencies": {
-    "gulp-uglifycss": "^1.1.0"
+    "gulp-uglifycss": "^1.1.0",
+    "sass": "^1.77.8"
   },
   "browserslist": [
     "> 1%",
@@ -44,9 +43,5 @@
     "ios >= 7",
     "android >= 4",
     "bb >= 10"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "sementesnk"
-  }
+  ]
 }
