Revert "Primeiro Commit"
This reverts commit 725bed01365ddd320c724d66b346aea88b46ba61.

--- a/wp-content/themes/tema/package.json
+++ b/wp-content/themes/tema/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tudodetexto",
+  "name": "starter",
   "version": "1.0.0",
-  "description": "Template Tudo de Texto Theme",
+  "description": "Template Starter Theme",
   "main": "index.js",
   "type": "module",
   "scripts": {
